--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,4 +42,7 @@ jobs:
         run: gcloud info
 
       - name: Build and push Docker image
-        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-483712/notely-ar-repo/notely:prod
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-483712/notely-ar-repoboo/notely:prod
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-483712/notely-ar-repoboo/notely:prod --region us-central1 --allow-unauthenticated --project notely-483712 --max-instances=4
