--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,9 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -29,6 +32,12 @@ jobs:
         run: |
           chmod +x scripts/buildprod.sh
           ./scripts/buildprod.sh
+
+      - name: Install goos
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: Run DB migrations
+        run: ./scripts/migrateup.sh
 
       - id: auth
         uses: google-github-actions/auth@v2
